# telegram-cybernews-bot

./: .gitignore  config.toml  main.py  pyproject.toml  requirements.txt
src/: bot.py  db.py  fetcher.py  main.py  scheduler.py
