[project]
name = "telegram-news-bot"
version = "0.1.0"
description = "Telegram bot that sends cybersecurity news to groups"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21,<22",
    "feedparser>=6,<7",
    "tomli>=2,<3",
    "httpx>=0.27,<1",
    "python-dotenv>=1,<2",
    "deep-translator>=1,<2",
]

[project.scripts]
news-bot = "src.main:main"
